force-app/main/default/objects/Requirement_Field__c/Requirement_Field__c.object-meta.xml
<CustomObject>
    <description>Defines individual fields within a requirement (e.g., "Legal Name", "Driver's License Number"). Master-Detail to Vendor_Program_Requirement__c ensures data integrity and cascade delete.</description>
    <label>Requirement Field</label>
    <nameField>
        <label>Requirement Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirement Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>