force-app/main/default/objects/Requirement_Field__c/fields/Requirement_Field_Group__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Field_Group__c</fullName>
    <label>Requirement Field Group</label>
    <referenceTo>Requirement_Field_Group__c</referenceTo>
    <relationshipLabel>Requirement Fields</relationshipLabel>
    <relationshipName>Requirement_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>Lookup</type>
</CustomField>