force-app/main/default/objects/Requirement_Field__c/fields/Validation_Type__c.field-meta.xml
<CustomField>
    <fullName>Validation_Type__c</fullName>
    <label>Validation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Format</fullName>
            </value>
            <value>
                <fullName>Cross-Field</fullName>
            </value>
            <value>
                <fullName>External</fullName>
                <label>External (Fortza)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>