force-app/main/default/objects/Requirement_Field__c/fields/Vendor_Program_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Requirement__c</fullName>
    <label>Vendor Program Requirement</label>
    <referenceTo>Vendor_Program_Requirement__c</referenceTo>
    <relationshipLabel>Requirement Fields</relationshipLabel>
    <relationshipName>Requirement_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>